// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CAccordionItem customize 1`] = `
<div>
  <div
    class="accordion-item bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CAccordionItem component 1`] = `
<div>
  <div
    class="accordion-item"
  >
    Test
  </div>
</div>
`;
